# infinite-echoes

./: .gitignore  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  index.html  justfile
.github/workflows/: deploy.yml
contracts/: README.md  jest.config.ts  package-lock.json  package.json  tact.config.json
contracts/contracts/: EchoPiece.tact  EchoRegistry.tact  EchoVault.tact  address_list.tact  constants.tact  counter.tact  messages.tact  (+1 more)
game/: Cargo.toml
game/src/: core.rs  game_state.rs  main.rs
game/src/debug/: hud.rs
game/src/engine/: audio.rs  audio_engine.rs  contract_info.rs  errors.rs  game_config.rs  game_engine.rs  game_settings.rs  game_state.rs  mod.rs  scheduler.rs  ton_wallet.rs
game/src/nodes/: audio_effect.rs  audio_graph.rs  audio_node.rs  mod.rs  note_effect.rs  note_generator.rs  oscillator.rs
game/src/render/: card.rs  cards_row.rs  drag_manager.rs  draggable_card_buffer.rs  hover.rs  layout.rs  mod.rs  rectangle.rs  rectangle_boundary.rs  shapes.rs  texture.rs
game/src/render/widgets/: arrow_widget.rs  audio_graph_widget.rs  card.rs  card_widget.rs  cards_row.rs  cards_row_widget.rs  error_popup_widget.rs  grid.rs  grid_widget.rs  line_widget.rs  mod.rs  piece_library_widget.rs  rectangle_widget.rs  settings_widget.rs
game/src/util/: time.rs
macros/src/: lib.rs
server/: Cargo.toml
src/: main.rs
ton_integration/: package-lock.json  package.json  webpack.config.js
web/: index.html  style.css  ton-api.js  ton-wallet.js  tonconnect-manifest.json
web_client/: .eslintrc.js  package-lock.json  package.json  webpack.config.js
(+38 files in other folders)
