[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.14"
miniquad = {version = "0.4.8", features = ["log-impl"]}
wasm-bindgen = "0.2.100"
macros = {path = "../macros/"}

[dependencies.web-sys]
version = "0.3.77"
features = [
  "AudioContext",
  "OscillatorType",
  "OscillatorNode",
  "AudioParam",
  "AudioDestinationNode",
  "GainNode"
]

# TODO: remove when building release
[lints.rust]
dead_code = "allow"
unused_variables = "warn"
unused_imports = "warn"
