[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.14"
miniquad = {version = "0.4.8", features = ["log-impl"]}
wasm-bindgen = "0.2.100"
macros = {path = "../macros/"}
wasm-bindgen-futures = "0.4.50"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.0"
base64 = "0.22.1"
bincode = "1.3.3"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "AudioContext",
  "OscillatorType",
  "OscillatorNode",
  "AudioParam",
  "AudioDestinationNode",
  "GainNode",
  "BiquadFilterType",
  "BiquadFilterNode",
  "WaveShaperNode",
  "OverSampleType",
  "ConvolverNode",
  "AudioBuffer"
]

# TODO: remove when building release
[lints.rust]
dead_code = "allow"
unused_variables = "warn"
unused_imports = "warn"
